# ArenaToolBox-Library

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/assets/: Cfa.cpp  Cfa.h  Dfa.cpp  Dfa.h  FileType.cpp  FileType.h  Img.cpp  Img.h  Palette.cpp  Palette.h
src/bsa/: BsaArchive.cpp  BsaArchive.h  BsaFile.cpp  BsaFile.h
src/configuration/: ApplicationConfiguration.cpp  ApplicationConfiguration.h  ArchiveConfiguration.cpp  ArchiveConfiguration.h  ArchiveConfigurationLoader.cpp  ArchiveConfigurationLoader.h
src/error/: Status.cpp  Status.h
src/utils/: BitsStreams.h  Compression.cpp  FileUtils.cpp  FileUtils.h  SlidingWindow.h  StreamUtils.cpp  StreamUtils.h
test/: CMakeLists.txt
test/main/: main.cpp
test/ressources/: decryptedINF.data
test/utils/: CompressionTest.cpp  CompressionTest.h
